Fix overflowing searchbar

--- a/themes/classic/_dev/css/components/search-widget.scss
+++ b/themes/classic/_dev/css/components/search-widget.scss
@@ -5,10 +5,6 @@
 
 .header-top {
   &-right {
-    @include media-breakpoint-down(md) {
-      padding-right: 0;
-    }
-
     @include media-breakpoint-down(xs) {
       width: 100%;
       padding-right: 15px;
